change(pom): latest Surefire version used to overcome various CI issues