@@ -10,7 +10,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <junit.version>5.2.0</junit.version>
+        <junit.version>5.3.1</junit.version>
         <java.version>11</java.version>
     </properties>
 
@@ -78,18 +78,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.1</version>
                 <configuration>
                     <rerunFailingTestsCount>2</rerunFailingTestsCount>
-                    <forkCount>0</forkCount>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.undo=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.command=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.instrument=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.fsm=ALL-UNNAMED</argLine>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>6.2</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
             <plugin>
