@@ -9,10 +9,8 @@
     <name>malai.javafx :: Malai JavaFX component</name>
 
     <properties>
-        <argLine>-Dheadless.geometry=1920x1080-32 -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw
-        </argLine>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>5.2.0</junit.version>
+        <junit.version>5.3.1</junit.version>
         <jfx.version>11</jfx.version>
         <java.version>11</java.version>
     </properties>
@@ -54,18 +52,34 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.1</version>
                 <configuration>
                     <rerunFailingTestsCount>2</rerunFailingTestsCount>
-                    <forkCount>0</forkCount>
+                    <argLine>-Dheadless.geometry=1920x1080-32
+                        -Djava.awt.headless=true
+                        -Dtestfx.robot=glass
+                        -Dtestfx.headless=true
+                        -Dprism.order=sw
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.undo=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.command=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.instrument=ALL-UNNAMED
+                        --add-opens malai.core/org.malai.fsm=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.binding=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.command=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.instrument=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.interaction=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.interaction.help=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.interaction.library=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.interaction.binding=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.ui=ALL-UNNAMED
+                        --add-opens malai.javafx/org.malai.javafx.undo=ALL-UNNAMED
+                    </argLine>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>6.2</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -74,13 +88,6 @@
             <groupId>org.malai</groupId>
             <artifactId>malai.core</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.malai</groupId>
-            <artifactId>malai.core</artifactId>
-            <version>${project.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
